--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <h1>Hello, world!</h1>
     <p>lorem ipsum dolor sit amet, consectetur lorem </p>
+    <p>olá pessoal</p>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
